--- a/Shopimage/package.json
+++ b/Shopimage/package.json
@@ -11,6 +11,10 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "esbuild": "^0.25.0",
+    "tsx": "^4.20.5",
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@paypal/paypal-server-sdk": "^2.2.0",
@@ -93,15 +97,11 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
-    "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
-    "typescript": "5.6.3",
-    "vite": "^7.3.0"
+    "typescript": "5.6.3"
   },
   "overrides": {
     "drizzle-kit": {
